igt@gem_exec_create@forked - incomplete - context submitted with incorrect RING_CTL [5a5a5a5a], expected 00000001, Invalid lrc state found after submission
<6> [105.372869] [IGT] gem_exec_create: starting subtest forked
<7> [108.353366] i915 0000:00:02.0: [drm:edp_panel_vdd_off_sync [i915]] Turning [ENCODER:275:DDI A] VDD off
<7> [108.353581] i915 0000:00:02.0: [drm:edp_panel_vdd_off_sync [i915]] PP_STATUS: 0x80000008 PP_CONTROL: 0x00000067
<7> [108.353643] i915 0000:00:02.0: [drm:intel_power_well_disable [i915]] disabling DC off
<7> [108.353709] i915 0000:00:02.0: [drm:skl_enable_dc6 [i915]] Enabling DC6
<7> [108.353763] i915 0000:00:02.0: [drm:gen9_set_dc_state [i915]] Setting DC state from 00 to 02
<3> [112.895443] vecs0: context submitted with incorrect RING_CTL [5a5a5a5a], expected 00000001
<4> [112.895511] ------------[ cut here ]------------
<4> [112.895513] Invalid lrc state found after submission
<4> [112.895617] WARNING: CPU: 7 PID: 126 at drivers/gpu/drm/i915/gt/intel_lrc.c:1254 execlists_check_context.isra.53+0xc4/0x100 [i915]
<4> [112.895620] Modules linked in: vgem snd_hda_codec_hdmi mei_hdcp i915 x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul snd_hda_intel ghash_clmulni_intel snd_intel_dspcfg snd_hda_codec cdc_ether usbnet snd_hwdep mii snd_hda_core snd_pcm e1000e mei_me ptp pps_core mei intel_lpss_pci prime_numbers
<4> [112.895644] CPU: 7 PID: 126 Comm: kworker/7:1 Tainted: G U 5.9.0-CI-CI_DRM_9148+ #1
<4> [112.895647] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.3197.A00.2005110542 05/11/2020
<4> [112.895704] Workqueue: events engine_retire [i915]
<4> [112.895756] RIP: 0010:execlists_check_context.isra.53+0xc4/0x100 [i915]
<4> [112.895759] Code: 00 00 eb d6 b8 54 01 00 00 eb cf 80 3d fc 3b 2c 00 00 75 e0 48 89 ee 48 c7 c7 a0 da 41 a0 c6 05 e9 3b 2c 00 01 e8 07 f5 e5 e0 <0f> 0b eb c6 49 8b 7c 24 08 e8 ee fb ff ff 8b 53 24 49 8d 75 18 48
<4> [112.895761] RSP: 0018:ffffc900002a8e40 EFLAGS: 00010286
<4> [112.895764] RAX: 0000000000000000 RBX: ffffc9000066d184 RCX: 0000000000000101
<4> [112.895767] RDX: 0000000080000101 RSI: ffffffff823313f9 RDI: 00000000ffffffff
<4> [112.895769] RBP: ffffffffa04657c2 R08: 0000000000000001 R09: 0000000000000001
<4> [112.895813] R10: 000000008d5f879f R11: 00000000ffd6c70a R12: ffff88847f37e840
<4> [112.895816] R13: ffff88847aee2000 R14: 00000000007ee000 R15: ffff8884775788c0
<4> [112.895819] FS: 0000000000000000(0000) GS:ffff8884a0980000(0000) knlGS:0000000000000000
<4> [112.895821] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [112.895824] CR2: 00007f707d57a5d0 CR3: 000000045f01a001 CR4: 0000000000770ee0
<4> [112.895826] PKRU: 55555554
<4> [112.895829] Call Trace:
<4> [112.895832] <IRQ>
<4> [112.895887] execlists_schedule_out+0xc4/0x3e0 [i915]
<4> [112.895938] process_csb+0x1ba/0x730 [i915]
<4> [112.895992] execlists_submission_tasklet+0x2f/0x130 [i915]
<4> [112.896000] tasklet_action_common.isra.17+0x1b6/0x200
<4> [112.896009] __do_softirq+0xde/0x4cb
<4> [112.896013] ? _raw_spin_lock+0x2a/0x40
<4> [112.896021] ? handle_level_irq+0x120/0x120
<4> [112.896026] asm_call_irq_on_stack+0xf/0x20
<4> [112.896029] </IRQ>
<4> [112.896035] do_softirq_own_stack+0x71/0x90
<4> [112.896061] irq_exit_rcu+0xad/0xd0
<4> [112.896068] common_interrupt+0xd0/0x210
<4> [112.896074] asm_common_interrupt+0x1e/0x40
<4> [112.896080] RIP: 0010:lock_acquire+0xe5/0x3a0
<4> [112.896082] Code: e8 20 0b 00 00 4c 8b 54 24 28 48 83 c4 20 41 8b 82 dc 08 00 00 83 e8 01 41 89 82 dc 08 00 00 66 85 c0 0f 85 33 02 00 00 53 9d <48> 8b 44 24 38 65 48 33 04 25 28 00 00 00 0f 85 9f 02 00 00 48 83
<4> [112.896085] RSP: 0018:ffffc9000155fde0 EFLAGS: 00000246
<4> [112.896088] RAX: 0000000000000000 RBX: 0000000000000246 RCX: 00000000731f1bcf
<4> [112.896090] RDX: ffff88849ddfc920 RSI: 000000008254631a RDI: 0000000000000000
<4> [112.896093] RBP: 0000000000000001 R08: 0000000000000001 R09: 00000000fffffffe
<4> [112.896095] R10: ffff88849ddfc040 R11: 00000000ffd6c70a R12: 0000000000000000
<4> [112.896097] R13: 0000000000000000 R14: ffff88849e8bf538 R15: 0000000000000000
<4> [112.896115] ? process_one_work+0x1fe/0x5c0
<4> [112.896123] process_one_work+0x223/0x5c0
<4> [112.896126] ? process_one_work+0x1e3/0x5c0
<4> [112.896136] worker_thread+0x37/0x380
<4> [112.896141] ? process_one_work+0x5c0/0x5c0
<4> [112.896145] kthread+0x149/0x170
<4> [112.896148] ? kthread_park+0x80/0x80
<4> [112.896155] ret_from_fork+0x1f/0x30
<4> [112.896170] irq event stamp: 2030786
<4> [112.896176] hardirqs last enabled at (2030792): [<ffffffff811318ed>] console_unlock+0x4cd/0x580
<4> [112.896179] hardirqs last disabled at (2030797): [<ffffffff8113183e>] console_unlock+0x41e/0x580
<4> [112.896182] softirqs last enabled at (2030254): [<ffffffff81e0037f>] __do_softirq+0x37f/0x4cb
<4> [112.896185] softirqs last disabled at (2030353): [<ffffffff81c00f4f>] asm_call_irq_on_stack+0xf/0x20
<4> [112.896202] ---[ end trace 818652c1d841624b ]---
```
Edited by LAKSHMINARAYANA VUDUM